# master

./: +  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  coverage.zsh  tags
doc/: CMakeLists.txt
doc/kolloquium/: beamerthemeKonstanz.sty  kolloquium.kilepr  main.tex  resources.bib
doc/kolloquium/img/: incl.xml
doc/neo4jstorage/: CMakeLists.txt  main.tex  resources.bib
doc/neo4jstorage/code/: PropertyTypeEnum.java  PropertyTypeLayout.java  example_query.cy
doc/neo4jstorage/img/: N4J_HLA  node_record.xml  rel_type_record  relationship_record.xml
doc/presentations/december/: CMakeLists.txt  main.tex  resources.bib
doc/spec/: 0-main.tex  00-title.tex  01-introduction.tex  02-record-layout.tex  03-architecture.tex  06-srs.tex  07-sdd.tex  08-eval.tex
doc/specification/: 0-main.tex  00-title.tex  02-architecture.tex  03-methods.tex  05-srs_sdd.tex
doc/specification/img/: activity.xml  io_arch.xml  overview.xml  rercord_arch.xml
doc/thesis/: 00-main.tex  01-abstract.tex  02-introduction.tex  03-graphs.tex  03-preliminaries.tex  04-databases.tex  04-methods.tex  04-problem_def.tex  05-eval.tex  05-problem_def.tex  05-related_w.tex  06-conclusions.tex  06-methods.tex  06-related_w.tex  07-eval.tex  07-methods.tex  08-conclusions.tex  09-appendix.tex  CMakeLists.txt  additional.tex  masterthesis.kilepr  resources.bib  themeKonstanz.sty
doc/thesis/.kile/: masterthesis.kilepr.gui
doc/thesis/code/: MaxIdLength.java
doc/thesis/data/: amazon_Block_sorted_io_comparison.tex  amazon_Block_unsorted_io_comparison.tex  amazon_Page_sorted_io_comparison.tex  amazon_Page_unsorted_io_comparison.tex  c_elegans_Block_sorted_io_comparison.tex  c_elegans_Block_unsorted_io_comparison.tex  c_elegans_Page_sorted_io_comparison.tex  c_elegans_Page_unsorted_io_comparison.tex  dblp_Block_sorted_io_comparison.tex  dblp_Block_unsorted_io_comparison.tex  dblp_Page_sorted_io_comparison.tex  dblp_Page_unsorted_io_comparison.tex  email_research_eu_Block_sorted_io_comparison.tex  email_research_eu_Block_unsorted_io_comparison.tex  email_research_eu_Page_sorted_io_comparison.tex  youtube_Block_sorted_io_comparison.tex  (+4 more)
doc/user_guide/: 0-main.tex  01-architecture.tex  01-intro.tex  01-introduction.tex  02-architecture.tex  02-methods.tex  03-methods.tex  04-conclusion.tex  04-srs_sdd.tex  05-srs.tex  05-srs_sdd.tex  06-sdd.tex  07-eval.tex  gdb.kilepr
gndb-rs/: Cargo.toml
gndb-rs/cache/: Cargo.toml
gndb-rs/io/: Cargo.toml
gndb-rs/storage/: Cargo.toml
include/data-struct/: CMakeLists.txt  array_list.c  array_list.h  bitmap.h  cbs.c  cbs.h  dict_ul.c  dict_ul.h  fibonacci_heap.c  fibonacci_heap.h  htable.c  htable.h  linked_list.c  linked_list.h  list.h  list_l.c  list_node.c  list_node.h  list_rel.c  list_rel.h  list_ul.c  queue.c  queue.h  queue_ul.h  set.c  set.h  set_ul.c
src/: CMakeLists.txt  constants.h  main.c  strace.c
src/access/: CMakeLists.txt  README.md  degree.c  header_page.c  header_page.h  heap_file.c  in_memory_file.c  in_memory_file.h  in_memory_graph.c  node.c  operators.c  relationship.c
src/analyze/: CMakeLists.txt  ids_to_io.c  ids_to_io.h
src/cache/: CMakeLists.txt  README.md  cache.h  page.c  page.h  page_cache.c  page_cache.h
src/data-struct/: CMakeLists.txt  README.md  array_list.c  bitmap.c  cbs.c  cbs.h  dict_ul.c  dict_ul.h  fibonacci_heap.c  fibonacci_heap.h  htable.c  htable.h  linked_list.c  list.c  list.h  list_l.c  list_l.h  list_node.c  list_node.h  list_rel.c  list_rel.h  list_ul.c  list_ul.h  queue.c  queue.h  queue_ul.c  queue_ul.h  set.c  set.h  set_ul.c  set_ul.h
src/data-types/: README.md  cbs.c  cbs.h  dict_node.c  dict_node.h  dict_ul.c  dict_ul.h  htable.c  htable.h  list.c  list.h  list_node.c  list_node.h  list_rel.c  list_rel.h  list_ul.c  list_ul.h  queue.c  queue.h  queue_node.c  queue_node.h  queue_ul.c  queue_ul.h  relationship_list.c  relationship_list.h  ul_helpers.c  ul_helpers.h
src/gen_data_types/: CMakeLists.txt  htable.c  htable.h  list.c  list.h  queue.c  queue.h
src/import/: CMakeLists.txt  snap_importer.c  snap_importer.h
src/importer/: snap_importer.c  snap_importer.h
src/io/: CMakeLists.txt  README.md  disk_file.c  disk_file.h  disk_space_manager.h  file.c  physical_database.c  physical_database.h
src/layout/: CMakeLists.txt  ids_to_io.c  random_layout.c  reorganize_nodes.c  reorganize_records.c  reorganize_relationships.c  trivial.c
src/locality/: CMakeLists.txt  g-store_layout.c  g-store_layout.h  icbl.c  icbl.h  ids_to_io.c  ids_to_io.h  reorganize_records.c  reorganize_records.h  trivial.c  trivial.h
src/order/: CMakeLists.txt  random_order.c  reorder_records.c
src/query/: CMakeLists.txt  README.md  a-star.c  a-star.h  alt.c  alt.h  bfs.c  bfs.h  degree.c  degree.h  dfs.c  dfs.h  dijkstra.c  dijkstra.h  heap_file_operators.c  in_memory_operators.c  louvain.c  louvain.h  operators.c  random_walk.c  random_walk.h  result_types.c  result_types.h  snap_importer.c
src/record/: README.md  arch.xml  node.c  node.h  relationship.c  relationship.h
src/storage/: CMakeLists.txt  README.md  storage.h
test/access/: CMakeLists.txt  ids_to_io_test.c  in_memory_file_test.c  operators_test.c  test_header_page.c  test_heap_file.c  test_in_memory_graph.c  test_node.c  test_relationship.c
test/cache/: CMakeLists.txt  page_cache_test.c  page_test.c
test/data-struct/: CMakeLists.txt  dict_ul_test.c  fibonacci_heap_test.c  list_test.c  queue_ul_test.c  set_ul_test.c
test/io/: CMakeLists.txt  disk_file_test.c  phy_database_test.c
test/layout/: CMakeLists.txt  random_layout_test.c  reorganize_nodes_test.c  reorganize_records_test.c  reorganize_rels_test.c
test/locality/: CMakeLists.txt  g-store_layout_test.c  icbl_test.c  reorganize_records_test.c
test/order/: CMakeLists.txt  random_layout_test.c  reorganize_records_test.c
test/query/: CMakeLists.txt  a-star_test.c  alt_test.c  bfs_test.c  degree_test.c  dfs_test.c  dijkstra_test.c  in_memory_operators_test.c  louvain_test.c  operators_test.c  random_walk_test.c  snap_importer_test.c
(+111 files in other folders)
