[package]
name = "gndb-rs"
version = "0.1.0"
authors = ["Fabian Klopfer <fabian.klopfer@ieee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
io = { path = "io" }
cache = { path = "cache" }
storage = { path = "storage" }
